05/sampleapp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: tomcat
        image: localhost:32000/sampleapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
spec:
  type: NodePort
  selector:
    app: sampleapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
