05/sampleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: django-app
        image: keidge/cws-sample
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
spec:
  type: ClusterIP
  selector:
    app: sampleapp
  ports:
  - port: 80
    targetPort: 8000
